--- a/docs/17~19.md
+++ b/docs/17~19.md
@@ -4,14 +4,15 @@
 - 파이썬 인터프리터가 필요 없어진 객체를 메모리에서 자동으로 삭제
 - 하지만, 코드를 제대로 작성하지 않으면 메모리 누수, 메모리 부족 문제 발생  
 
-**메모리 관리 방법 2가지**
-1. 참조(reference) 수를 세는 방법 : 참조 카운트
+**메모리 관리 방법 2가지**  
+
+**1. 참조(reference) 수를 세는 방법 : 참조 카운트**
 - 참조 카운트가 0인 상태로 생성되고, 다른 객체가 참조할 때마다 1씩 증가
 - 객체에 대한 참조가 끊길 때마다 1만큼 감소하고 0이 되면 파이썬 인터프리터가 회수 후 즉시 메모리에서 삭제
 - 구조가 간단하고 속도가 빠르다는 장점
 - 예시) 대입 연산자를 사용할 떄, 함수에 인자로 전달할 때, 컨테이너 타입 객체(리스트, 튜플, 클래스 등)에 추가할 때
 
-2. 세대(generation)을 기준으로 쓸모없어진 객체를 회수하는 방법 : GC(Garbage Collection)
+**2. 세대(generation)을 기준으로 쓸모없어진 객체를 회수하는 방법 : GC(Garbage Collection)**
 - 순환 참조의 경우 참조 카운트 방법으로 해결이 불가능하나 GC는 해결 가능
 - 참조 카운트와는 달리 메모리가 부족해지는 시점에 파이썬 인터프리터에 의해 자동으로 호출
 - 명시적으로 호출할 경우 gc.collect()로 실행
@@ -23,7 +24,16 @@
 - 약한 참조 : 다른 객체를 참조하되 참조 카운트는 증가시키지 않는 기능
 
 ## Chapter 18 : 메모리 절약 모드
-- 메모리 사용을 개선할 수 있는 2가지 구조
-1. 역전파 시 사용하는 메모리양을 줄이는 방법(불필요한 미분 결과를 보관하지 않고 즉시 삭제)
-2. 역전파가 필요 없는 경우용 모드(불필요한 계산을 생략)
+- 메모리 사용을 개선할 수 있는 2가지 구조  
 
+**1. 역전파 시 사용하는 메모리양을 줄이는 방법(불필요한 미분 결과를 보관하지 않고 즉시 삭제)**
+- Variable 클래스의 backward 메소드에 retain_grad 추가해 사용  
+
+**2. 역전파가 필요 없는 경우용 모드(불필요한 계산을 생략)**
+- Config 클래스를 사용해 모드 전환
+- contesxtlib 모듈을 활용해 간편하게 사용
+
+## Chapter 19 : 변수 사용성 개선
+- 변수 이름 지정
+- ndarray 인스턴스 변수
+- __len__, __repr__ 정의
